JDK 24 compatibility